--- a/style.css
+++ b/style.css
@@ -4,23 +4,23 @@ div{
     background-position: center;
     background-size: cover;
 }
+li>p {
+    color: white;
+}
 div>h3 {
     color: white;
     text-align: center;
 }
-#container {
-    text-overflow: ellipsis;
+.d-flex {
     background-image: none;
     display: flex;
     background-color: dodgerblue;
 }
-#container > div {
+.d-flex > div {
     background-image: none;
     background-color: #f1f1f1;
-    margin: 20px;
-    font-size: 20px;
+    margin: 10px;
     padding: 20px;
-    width: 200px;
 }
 .baz {
     background-image: none;
