--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ div{
     background-position: center;
     background-size: cover;
 }
-.font-weight-normal{
+.font-weight-bold{
     color: white;
+    padding: 20px;
 }
 div>h3 {
     color: white;
