--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#sit>img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 .carousel-caption> h3{
     text-align: center;
 }
